--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,7 +22,7 @@ body{
 	width: 100%;
 	overflow: hidden;
 	height:100%;
-	background: url(../images/backgroung.png) center center no-repeat;
+	background: url(../images/backfround.jpg) center center no-repeat;
 	/*background-color: #1c1c1c;*/
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
