--- a/templates/index.html
+++ b/templates/index.html
@@ -180,12 +180,12 @@
                 <h5>Exploring New Dimensions</h5>
                 <p>On bright sunny day, I am usually found either reading a research paper or implementing one !!!.
                     It's my day job. </p>
-                <ul>
-                    <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
-                    <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>
-                </ul>
+                {#                <ul>#}
+                {#                    <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>#}
+                {#                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>#}
+                {#                    #}
+                {#                    <li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>#}
+                {#                </ul>#}
             </div>
 
 
@@ -195,12 +195,12 @@
                 <h5>Exploring New Support Tool</h5>
                 <p>Have experience in Developing App supporting visualization of my Projects.</br>Flask, Php, Mysql and
                     Redis. </p>
-                <ul>
-                    <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
-                    <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>
-                </ul>
+                {#                <ul>#}
+                {#                    <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>#}
+                {#                    <li><a href="#"><i class="fa fa-pinterest"></i></a></li>#}
+                {#                    #}
+                {#                    <li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>#}
+                {#                </ul>#}
             </div>
 
 
@@ -211,12 +211,11 @@
                 <p>Acha Chalta hu, Duwaaon me yaad Rakhna </br>
                     Beaches, Mountains, Bangkok !!
                 </p>
-                <ul>
-                    <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
-                    <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>
-                </ul>
+                {#                <ul>#}
+                {#                    <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>#}
+                {#                    <li><a href="#"><i class="fa fa-pinterest"></i></a></li>#}
+                {#                    <li><a href="#"><i class="fa fa-google-plus-square"></i></a></li>#}
+                {#                </ul>#}
             </div>
         </div>
     </div>
@@ -230,10 +229,10 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3 bar">
-                <div class="progB chart" data-percent="64" data-animate="3500">
+                <div class="progB chart" data-percent="85" data-animate="3500">
                     <div class="chart chart-content">
-                        <div class="percentage" data-percent="64">
-                            <span class="percent">64</span>
+                        <div class="percentage" data-percent="85">
+                            <span class="percent">85</span>
                         </div>
                     </div>
                 </div>
@@ -243,10 +242,10 @@
                 </div>
             </div>
             <div class="col-md-3 bar">
-                <div class="progB chart" data-percent="22" data-animate="3500">
+                <div class="progB chart" data-percent="80" data-animate="3500">
                     <div class="chart chart-content">
-                        <div class="percentage" data-percent="22">
-                            <span class="percent">22</span>
+                        <div class="percentage" data-percent="80">
+                            <span class="percent">80</span>
                         </div>
                     </div>
                 </div>
@@ -255,11 +254,12 @@
                     <p>Hands on Experience</p>
                 </div>
             </div>
+
             <div class="col-md-3 bar ">
-                <div class="progB chart" data-percent="84" data-animate="3500">
+                <div class="progB chart" data-percent="55" data-animate="3500">
                     <div class="chart chart-content">
-                        <div class="percentage" data-percent="22">
-                            <span class="percent">84</span>
+                        <div class="percentage" data-percent="55">
+                            <span class="percent">55</span>
                         </div>
                     </div>
                 </div>
@@ -268,11 +268,12 @@
                     <p>Basic Level <br/>HTML(Semantic), Javascript used in developing Tools</p>
                 </div>
             </div>
+
             <div class="col-md-3 bar ">
-                <div class="progB chart" data-percent="45" data-animate="3500">
+                <div class="progB chart" data-percent="60" data-animate="3500">
                     <div class="chart chart-content">
-                        <div class="percentage" data-percent="45">
-                            <span class="percent">45</span>
+                        <div class="percentage" data-percent="60">
+                            <span class="percent">60</span>
                         </div>
                     </div>
                 </div>
@@ -363,8 +364,6 @@
 </div>
 
 <!--BLOG start-->
-
-
 <div id="news">
     <div class="container">
         <div class="row Ama">
