break down index page

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,2 +1,138 @@
-{% include 'blog_page_top.html' %}
-{% include 'blog_page_bottom.html' %}
+<div id="news">
+    <div class="container">
+        <div class="row Ama">
+            <div class="col-md-12">
+                <h3>What&rsquo;s New?</h3>
+                <p>Get the latest from my blog</p>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row news">
+            <div class="col-sm-4 text-left">
+                <img class="img-responsive picsGall hidden" style="width:264px;height:224px;"
+                     src="../static/images/ReviewHighlight.png"/>
+                <h3><a href="#">Review Highlight @Zomato</a></h3>
+                <ul>
+                    <li><i class="fa fa-calendar"></i>April 25, 2014</li>
+                    <li><a href="#"><i class="fa fa-folder-open"></i>Staff</a></li>
+                    <li><a href="#"><i class="fa fa-comments"></i>17 comments</a></li>
+                </ul>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit quisque tempus ac eget diam et laoreet
+                    phasellus ut nisi id leo molestie. adipiscing vitae vel quam proin eget mauris eget. <a
+                            class="readMore" href="#">Read More <i class="fa fa-angle-right"></i></a></p>
+                <hr class="hrNews">
+            </div>
+            <div class="col-sm-4 text-right">
+                <img class="img-responsive picsGall hidden" src="../static/images/picNews/news2.jpg"/>
+                <h3><a href="#">Nam in Nisl id Ipsum Feugiat Posuere ut sit Amet Sem</a></h3>
+                <ul>
+                    <li><i class="fa fa-calendar"></i>April 25, 2014</li>
+                    <li><a href="#"><i class="fa fa-folder-open"></i>Staff</a></li>
+                    <li><a href="#"><i class="fa fa-comments"></i>17 comments</a></li>
+                </ul>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit quisque tempus ac eget diam et laoreet
+                    phasellus ut nisi id leo molestie. adipiscing vitae vel quam proin eget mauris eget. <a
+                            class="readMore" href="#">Read More <i class="fa fa-angle-right"></i></a></p>
+                <hr class="hrNews">
+            </div>
+            <div class="col-sm-4 text-left">
+                <img class="img-responsive picsGall hidden" src="../static/images/picNews/news3.jpg"/>
+                <h3><a href="#">Photo Classification @Zomato</a></h3>
+                <ul>
+                    <li><i class="fa fa-calendar"></i>April 25, 2014</li>
+                    <li><a href="#"><i class="fa fa-folder-open"></i>Staff</a></li>
+                    <li><a href="#"><i class="fa fa-comments"></i>17 comments</a></li>
+                </ul>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit quisque tempus ac eget diam et laoreet
+                    phasellus ut nisi id leo molestie. adipiscing vitae vel quam proin eget mauris eget. <a
+                            class="readMore" href="#">Read More <i class="fa fa-angle-right"></i></a></p>
+                <hr class="hrNews">
+            </div>
+
+        </div>
+    </div>
+    <div class="container">
+        <div class="row news2 news">
+            <div class="col-sm-4 text-right">
+                <img class="img-responsive picsGall hidden" src="../static/images/picNews/news4.jpg"/>
+                <h3><a href="#">Image Qulaity @Zomato</a></h3>
+                <ul>
+                    <li><i class="fa fa-calendar"></i>April 25, 2014</li>
+                    <li><a href="#"><i class="fa fa-folder-open"></i>Staff</a></li>
+                    <li><a href="#"><i class="fa fa-comments"></i>17 comments</a></li>
+                </ul>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit quisque tempus ac eget diam et laoreet
+                    phasellus ut nisi id leo molestie. adipiscing vitae vel quam proin eget mauris eget. <a
+                            class="readMore" href="#">Read More <i class="fa fa-angle-right"></i></a></p>
+                <hr class="hrNews">
+            </div>
+            <div class="col-sm-4 text-left">
+                <img class="img-responsive picsGall hidden" src="../static/images/picNews/news5.jpg"/>
+                <h3><a href="#">Human Emotions @Academic Project</a></h3>
+                <ul>
+                    <li><i class="fa fa-calendar"></i>April 25, 2014</li>
+                    <li><a href="#"><i class="fa fa-folder-open"></i>Staff</a></li>
+                    <li><a href="#"><i class="fa fa-comments"></i>17 comments</a></li>
+                </ul>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit quisque tempus ac eget diam et laoreet
+                    phasellus ut nisi id leo molestie. adipiscing vitae vel quam proin eget mauris eget. <a
+                            class="readMore" href="#">Read More <i class="fa fa-angle-right"></i></a></p>
+                <hr class="hrNews">
+            </div>
+            <div class="col-sm-4 text-right">
+                <img class="img-responsive picsGall  hidden" src="../static/images/picNews/news6.jpg"/>
+                <h3><a href="#">@Academic</a></h3>
+                <ul>
+                    <li><i class="fa fa-calendar"></i>April 25, 2014</li>
+                    <li><a href="#"><i class="fa fa-folder-open"></i>Staff</a></li>
+                    <li><a href="#"><i class="fa fa-comments"></i>17 comments</a></li>
+                </ul>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit quisque tempus ac eget diam et laoreet
+                    phasellus ut nisi id leo molestie. adipiscing vitae vel quam proin eget mauris eget. <a
+                            class="readMore" href="#">Read More <i class="fa fa-angle-right"></i></a></p>
+                <hr class="hrNews">
+            </div>
+        </div>
+    </div>
+
+    <div class="container hideObj2" style="display:none;">
+        <div class="row news2 news">
+            <div class="col-sm-4 text-right">
+                <img class="img-responsive picsGall hidden" src="../static/images/picNews/news6.jpg"/>
+                <h3><a href="#">Nam in Nisl id Ipsum Feugiat Posuere ut sit Amet Sem</a></h3>
+                <ul>
+                    <li><i class="fa fa-calendar"></i>April 25, 2014</li>
+                    <li><a href="#"><i class="fa fa-folder-open"></i>Staff</a></li>
+                    <li><a href="#"><i class="fa fa-comments"></i>17 comments</a></li>
+                </ul>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit quisque tempus ac eget diam et laoreet
+                    phasellus ut nisi id leo molestie. adipiscing vitae vel quam proin eget mauris eget. <a
+                            class="readMore" href="#">Read More <i class="fa fa-angle-right"></i></a></p>
+                <hr class="hrNews">
+            </div>
+            <div class="col-sm-4 text-left">
+                <img class="img-responsive picsGall hidden" src="../static/images/picNews/news5.jpg"/>
+                <h3><a href="#">Lorem Ipsum Dolor sit Amet Pelenntesque Sodales!</a></h3>
+                <ul>
+                    <li><i class="fa fa-calendar"></i>April 25, 2014</li>
+                    <li><a href="#"><i class="fa fa-folder-open"></i>Staff</a></li>
+                    <li><a href="#"><i class="fa fa-comments"></i>17 comments</a></li>
+                </ul>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit quisque tempus ac eget diam et laoreet
+                    phasellus ut nisi id leo molestie. adipiscing vitae vel quam proin eget mauris eget. <a
+                            class="readMore" href="#">Read More <i class="fa fa-angle-right"></i></a></p>
+                <hr class="hrNews">
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row cBtn">
+            <div class="col-md-12" style="text-align: center; margin-bottom: -90px; z-index: 10;">
+                <ul class="mNews">
+                    <li class="dowbload bhide2"><a href="#"><i class="fa fa-arrow-down"></i>Load More ...</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
