--- a/templates/page_bottom.html
+++ b/templates/page_bottom.html
@@ -1,127 +1,7 @@
-<div id="contact">
-    <div class="line5">
-        <div class="container">
-            <div class="row Ama">
-                <div class="col-md-12">
-                    <h3>Got a Question? I'm Here to Help!</h3>
-                    <p>Get in touch with me</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-9 col-xs-12 forma">
-                <form>
-                    <input type="text" class="col-md-6 col-xs-12 name" name='name' placeholder='Name *'/>
-                    <input type="text" class="col-md-6 col-xs-12 Email" name='Email' placeholder='Email *'/>
-                    <input type="text" class="col-md-12 col-xs-12 Subject" name='Subject' placeholder='Subject'/>
-                    <textarea type="text" class="col-md-12 col-xs-12 Message" name='Message'
-                              placeholder='Message *'></textarea>
-                    <div class="cBtn col-xs-12">
-                        <ul>
-                            <li class="clear"><a href="#"><i class="fa fa-times"></i>clear form</a></li>
-                            <li class="send"><a href="#"><i class="fa fa-share"></i>Send Message</a></li>
-                        </ul>
-                    </div>
-                </form>
-            </div>
-            <div class="col-md-3 col-xs-12 cont">
-                <ul>
-                    <li><i class="fa fa-home"></i>M-634 SF,Symphony Floor, Sector-51, Gurgaon, India</li>
-                    <li><i class="fa fa-phone"></i>+91 9643 183609</li>
-                    <li><a href="#"><i class="fa fa-envelope"></i>amit_kushwaha@outlook.com</li>
-                    </a>
-                    <li><i class="fa fa-skype"></i>compname</li>
-                    <li><a href="#"><i class="fa fa-twitter"></i>Twitter</li>
-                    </a>
-                    <li><a href="#"><i class="fa fa-facebook-square"></i>Facebook</li>
-                    </a>
-                    <li><a href="#"><i class="fa fa-dribbble"></i>Dribbble</li>
-                    </a>
-                    <li><a href="#"><i class="fa fa-flickr"></i>Flickr</li>
-                    </a>
-                    <li><a href="#"><i class="fa fa-youtube-play"></i>YouTube</li>
-                    </a>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="line6">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d48386.401887313725!2d-73.9407136!3d40.7147117!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1402409149092"
-                width="70%" height="750" frameborder="0" style=" margin-left: 20px; border:0"></iframe>
-    </div>
-    <div class="container">
-        <div class="row ftext">
-            <div class="col-md-12">
-                <a id="features"></a>
-                <h3>We Care About Our Clients and Can Make Their Life Easier!</h3>
-                <p>The main peculiarity of template is the striking presentation when visitors just need to use the
-                    scrolling option to find all necessary information about your web project. </p>
-            </div>
-            <div class="cBtn">
-                <ul style="margin-top: 23px; margin-bottom: 0px; padding-left: 26px;">
-                    <li class="dowbload"><a href="#"><i class="fa fa-star"></i>View All Features</a></li>
-                    <li class="buy"><a href="#"><i class="fa fa-download"></i>Buy This Template</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="line7">
-        <div class="container">
-            <div class="row footer">
-                <div class="col-md-12">
-                    <h3>Subscribe for Our Newsletter!</h3>
-                    <p>Subscribe to our newsletter email to get notification about fresh news, latest promos, giveaways
-                        and free stuff from Skew. Stay always up-to-date!</p>
-                    <div class="fr">
-                        <div style="display: inline-block;">
-                            <input class="col-md-6 fEmail" name='Email' placeholder='Enter Your Email'/>
-                            <a href="#" class="subS">Subscribe!</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="soc col-md-12">
-                    <ul>
-                        <li class="soc1"><a href="#"></a></li>
-                        <li class="soc2"><a href="#"></a></li>
-                        <li class="soc3"><a href="#"></a></li>
-                        <li class="soc4"><a href="#"></a></li>
-                        <li class="soc5"><a href="#"></a></li>
-                        <li class="soc6"><a href="#"></a></li>
-                        <li class="soc7"><a href="#"></a></li>
-                        <li class="soc8"><a href="#"></a></li>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
+    Disqus.</a></noscript>
+<script id="dsq-count-scr" src="//amitkushwaha.disqus.com/count.js" async></script>
 
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="lineBlack">
-        <div class="container">
-            <div class="row downLine">
-                <div class="col-md-12 text-right">
-                    <!--input  id="searchPattern" type="search" name="pattern" value="Search the Site" onblur="if(this.value=='') {this.value='Search the Site'; }" onfocus="if(this.value =='Search the Site' ) this.value='';this.style.fontStyle='normal';" style="font-style: normal;"/-->
-                    <input id="searchPattern" type="search" placeholder="Search the Site"/><i
-                        class="glyphicon glyphicon-search" style="font-size: 13px; color:#a5a5a5;" id="iS"></i>
-                </div>
-                <div class="col-md-6 text-left copy">
-                    <p>Copyright &copy; 2014 Amit Kushwaha. All Rights Reserved.</p>
-                </div>
-                <div class="col-md-6 text-right dm">
-                    <ul id="downMenu">
-                        <li class="active"><a href="#home">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#project1">Projects</a></li>
-                        <li><a href="#news">News</a></li>
-                        <li class="last"><a href="#contact">Contact</a></li>
-                        <!--li><a href="#features">Features</a></li-->
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 
 <script src="../static/js/jquery.prettyPhoto.js" type="text/javascript" charset="utf-8"></script>
 <script src="../static/js/bootstrap.min.js"></script>
@@ -167,13 +47,13 @@
                 var curval = parseInt($('#counter').text());
                 var curval1 = parseInt($('#counter1').text().replace(' ', ''));
                 var curval2 = parseInt($('#counter2').text());
-                if (curval <= 7) {
+                if (curval < 6) {
                     $('#counter').text(curval + 1);
                 }
-                if (curval1 <= 2) {
-                    $('#counter1').text(sdf_FTS((curval1 + 20), 0, ' '));
+                if (curval1 < 2) {
+                    $('#counter1').text(sdf_FTS((curval1 + 1), 0, ' '));
                 }
-                if (curval2 <= 0) {
+                if (curval2 < 0) {
                     $('#counter2').text(curval2 + 1);
                 }
             }, 2);
@@ -200,12 +80,12 @@
                             .addClass("fixed transbg")
                             .fadeIn('fast');
                 });
-            } else if ($(this).scrollTop() <= 100 && $menu.hasClass("fixed")) {
-                $menu.fadeOut('fast', function () {
-                    $(this).removeClass("fixed transbg")
-                            .addClass("default")
-                            .fadeIn('fast');
-                });
+                {#            } else if ($(this).scrollTop() <= 100 && $menu.hasClass("fixed")) {#}
+                {#                $menu.fadeOut('fast', function () {#}
+                {#                    $(this).removeClass("fixed transbg")#}
+                {#                            .addClass("default")#}
+                {#                            .fadeIn('fast');#}
+                {#                });#}
             }
         });
     });
@@ -231,6 +111,7 @@
             }
         })
     }
+    ;
 
     $(document).ready(function () {
         calculateScroll();
@@ -256,6 +137,25 @@
 
     });
 </script>
+<script>
+
+    /**
+     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+     *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+    /*
+     var disqus_config = function () {
+     this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+     this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+     };
+     */
+    (function () { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://amitkushwaha.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+    })();
+</script>
+
 </body>
 
 </html>
