--- a/templates/page_includes.html
+++ b/templates/page_includes.html
@@ -1,5 +1,161 @@
-<link rel="stylesheet" type="text/css" href="{{ ROOT_PATH }}/static/css/commons.css">
-<link rel="stylesheet" type="text/css"
-      href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.7/semantic.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.7/semantic.min.js"></script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
+    Disqus.</a></noscript>
+<script id="dsq-count-scr" src="//amitkushwaha.disqus.com/count.js" async></script>
+
+
+<script src="../static/js/jquery.prettyPhoto.js" type="text/javascript" charset="utf-8"></script>
+<script src="../static/js/bootstrap.min.js"></script>
+<script src="../static/js/jquery.slicknav.js"></script>
+<script>
+    $(document).ready(function () {
+        $(".bhide").click(function () {
+            $(".hideObj").slideDown();
+            $(this).hide(); //.attr()
+            return false;
+        });
+        $(".bhide2").click(function () {
+            $(".container.hideObj2").slideDown();
+            $(this).hide(); // .attr()
+            return false;
+        });
+
+        $('.heart').mouseover(function () {
+            $(this).find('i').removeClass('fa-heart-o').addClass('fa-heart');
+        }).mouseout(function () {
+            $(this).find('i').removeClass('fa-heart').addClass('fa-heart-o');
+        });
+
+        function sdf_FTS(_number, _decimal, _separator) {
+            var decimal = (typeof(_decimal) != 'undefined') ? _decimal : 2;
+            var separator = (typeof(_separator) != 'undefined') ? _separator : '';
+            var r = parseFloat(_number)
+            var exp10 = Math.pow(10, decimal);
+            r = Math.round(r * exp10) / exp10;
+            rr = Number(r).toFixed(decimal).toString().split('.');
+            b = rr[0].replace(/(\d{1,3}(?=(\d{3})+(?:\.\d|\b)))/g, "\$1" + separator);
+            r = (rr[1] ? b + '.' + rr[1] : b);
+
+            return r;
+        }
+
+        setTimeout(function () {
+            $('#counter').text('0');
+            $('#counter1').text('0');
+            $('#counter2').text('0');
+            setInterval(function () {
+
+                var curval = parseInt($('#counter').text());
+                var curval1 = parseInt($('#counter1').text().replace(' ', ''));
+                var curval2 = parseInt($('#counter2').text());
+                if (curval < 6) {
+                    $('#counter').text(curval + 1);
+                }
+                if (curval1 < 2) {
+                    $('#counter1').text(sdf_FTS((curval1 + 1), 0, ' '));
+                }
+                if (curval2 < 0) {
+                    $('#counter2').text(curval2 + 1);
+                }
+            }, 2);
+
+        }, 500);
+    });
+</script>
+<script type="text/javascript">
+    jQuery(document).ready(function () {
+        jQuery('#menu').slicknav();
+
+    });
+</script>
+
+<script type="text/javascript">
+    $(document).ready(function () {
+
+        var $menu = $("#menuF");
+
+        $(window).scroll(function () {
+            if ($(this).scrollTop() > 100 && $menu.hasClass("default")) {
+                $menu.fadeOut('fast', function () {
+                    $(this).removeClass("default")
+                            .addClass("fixed transbg")
+                            .fadeIn('fast');
+                });
+                {#            } else if ($(this).scrollTop() <= 100 && $menu.hasClass("fixed")) {#}
+                {#                $menu.fadeOut('fast', function () {#}
+                {#                    $(this).removeClass("fixed transbg")#}
+                {#                            .addClass("default")#}
+                {#                            .fadeIn('fast');#}
+                {#                });#}
+            }
+        });
+    });
+    //jQuery
+</script>
+<script>
+    /*menu*/
+    function calculateScroll() {
+        var contentTop = [];
+        var contentBottom = [];
+        var winTop = $(window).scrollTop();
+        var rangeTop = 200;
+        var rangeBottom = 500;
+        $('.navmenu').find('a').each(function () {
+            contentTop.push($($(this).attr('href')).offset().top);
+            contentBottom.push($($(this).attr('href')).offset().top + $($(this).attr('href')).height());
+        })
+        $.each(contentTop, function (i) {
+            if (winTop > contentTop[i] - rangeTop && winTop < contentBottom[i] - rangeBottom) {
+                $('.navmenu li')
+                        .removeClass('active')
+                        .eq(i).addClass('active');
+            }
+        })
+    }
+    ;
+
+    $(document).ready(function () {
+        calculateScroll();
+        $(window).scroll(function (event) {
+            calculateScroll();
+        });
+        $('.navmenu ul li a').click(function () {
+            $('html, body').animate({scrollTop: $(this.hash).offset().top - 80}, 800);
+            return false;
+        });
+    });
+</script>
+<script type="text/javascript" charset="utf-8">
+
+    jQuery(document).ready(function () {
+        jQuery(".pretty a[rel^='prettyPhoto']").prettyPhoto({
+            animation_speed: 'normal',
+            theme: 'light_square',
+            slideshow: 3000,
+            autoplay_slideshow: true,
+            social_tools: ''
+        });
+
+    });
+</script>
+<script>
+
+    /**
+     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+     *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+    /*
+     var disqus_config = function () {
+     this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+     this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+     };
+     */
+    (function () { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://amitkushwaha.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+    })();
+</script>
+
+</body>
+
+</html>
